fix x overflow

--- a/sass/misc/_normalize.scss
+++ b/sass/misc/_normalize.scss
@@ -61,6 +61,6 @@ body{
 
 @media screen and (max-width: 480px) {
     body{
-        grid-template-rows: 8em 100% 12em;
+        grid-template-rows: 8em 100% 15em;
     }
 }
